--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ $(function () {
     <section class="group5">
       <h1>BIENVENIDO</h1>
       <article>
-        <h2>Bienvenido a nuestra página web, Clínica Veterinaria EL Hato, en está páguna web obtendras información sobre nuestros servicios que ofrecemos a nuestros clientes, en los cuales están los siguientes</h2>
+        <h2>Bienvenido a nuestra página web, Clínica Veterinaria EL Hato, en está página web obtendras información sobre nuestros servicios que ofrecemos a nuestros clientes, en los cuales están los siguientes</h2>
       </article> 
     </section>
   </div>
